...
    <string name="browse">Browse</string>
    <string name="apply">Apply</string>
    <string name="close">Close</string>
    <string name="next">Next</string>

    <string name="version">Version %1$s</string>
...
    <string name="dalle_no_img2img_support_sub_title_2">You can switch to any another server based generation in Configuration settings to use Image to Image mode.</string>

    <string name="action_generate">Imagine</string>
    <string name="action_export">Export</string>
    <string name="action_delete_image">Delete image</string>
    <string name="action_select">Select</string>
    <string name="action_connect">Connect</string>
    <string name="action_setup">Setup</string>
    <string name="action_share_prompt">Share</string>
...
    <string name="action_undo">Undo</string>
    <string name="action_clear">Clear</string>
    <string name="action_options_show">Show advanced options</string>
    <string name="action_options_hide">Hide advanced options</string>
    <string name="action_image_picker_gallery">Choose photo</string>
    <string name="action_image_picker_camera">Take new photo</string>
    <string name="action_image_picker_random">Random image</string>
    <string name="action_change_configuration">Change configuration</string>

...
    <string name="srv_step_2">Configure</string>

    <string name="srv_type_own" translatable="false">Automatic 1111</string>
    <string name="srv_type_own_short" translatable="false">A1111</string>
    <string name="srv_type_horde" translatable="false">Horde AI Cloud</string>
...
    <string name="srv_type_open_ai" translatable="false">Open AI</string>
    <string name="srv_type_stability_ai" translatable="false">Stability AI</string>
    <string name="srv_type_swarm_ui" translatable="false">Swarm UI</string>

    <string name="hint_prompt">Prompt</string>
    <string name="hint_prompt_negative">Negative prompt</string>
    <string name="hint_sampling_steps">Sampling steps: %1$s</string>
    <string name="hint_batch">Batch: %1$s</string>
...
    <string name="hint_sub_seed_strength">Variation strength: %1$s</string>
    <string name="hint_denoising_strength">Denoising Strength: %1$s</string>
    <string name="hint_server_url">Server URL</string>
    <string name="hint_sd_model">SD Model</string>
    <string name="hint_login">Login</string>
...
    <string name="drawer_web_ui">Web UI</string>

    <string name="home_tab_txt_to_img">Txt2Img</string>
    <string name="home_tab_img_to_img">Img2Img</string>
    <string name="home_tab_gallery">Gallery</string>
    <string name="home_tab_settings">Settings</string>

    <string name="gallery_tab_image">Image</string>
    <string name="gallery_tab_original">Original</string>
    <string name="gallery_tab_info">Info</string>

    <string name="title_text_to_image">Text to Image</string>
    <string name="title_image_to_image">Image to Image</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_gallery_details">Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_server_setup">Configuration</string>
    <string name="title_select_sd_model">Select SD ML Model</string>
    <string name="title_clear_app_cache">Clear app cache</string>
...
    <string name="settings_header_app">App settings</string>
    <string name="settings_header_info">Info</string>
    <string name="settings_header_look_and_feel">Look and feel</string>

    <string name="settings_item_config">Configuration</string>
...

    <string name="settings_item_language">Language</string>
    <string name="settings_item_demo">Demo mode</string>
    <string name="settings_item_monitor_connection">Monitor connection</string>
    <string name="settings_item_auto_save">Auto save images</string>
    <string name="settings_item_auto_save_media_store">Save to Downloads</string>
    <string name="settings_item_tagged_input">Tagged input</string>
    <string name="settings_item_advanced_form_default">Always show advanced options</string>
    <string name="settings_item_clear_cache">Clear app &amp; gallery cache</string>

    <string name="settings_item_lf_lang">Language</string>
    <string name="settings_item_lf_dynamic_colors">Dynamic colors</string>
    <string name="settings_item_lf_system_dark_theme">System dark theme</string>
    <string name="settings_item_lf_dark_theme">Dark theme</string>
    <string name="settings_item_lf_dark_theme_color">Background color</string>
    <string name="settings_item_lf_accent_color">Accent color</string>

    <string name="settings_item_report_problem">Report a problem</string>
...
    <string name="extras_empty_sub_title_embedding">Add some content on %1$s server to: \n\n.%2$s</string>

    <string name="in_paint_title" translatable="false">Inpaint</string>
    <string name="in_paint_tab_1">Draw</string>
    <string name="in_paint_tab_2">Adjust</string>

...
